fix:fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,3 +111,13 @@ body {
         transform: rotate(360deg);
     }
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: white;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(167, 166, 166);
+  }
+  
